--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language:
-  - c
+  - cpp
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
