--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language:
-  - cpp
+  - c
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
   - "./miniconda.sh -b"
   - export PATH=/home/travis/miniconda2/bin:$PATH
-  - conda update --yes conda
+  - conda update --yes conda --quiet
 install:
   - bash install.sh
-script: true
+script:
+  - bash FACS.sh --mode p \
+        --fasta example_seqs/expep.faa.gz \
+        --outfolder out_peptides \
+        --outtag example -t 4
