--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,4 @@ before_install:
 install:
   - bash install.sh
 script:
-  - bash FACS.sh --mode p \
-        --fasta example_seqs/expep.faa.gz \
-        --outfolder out_peptides \
-        --outtag example -t 4
+  - bash automatedTest.sh
