ENH Convert to using NGLess instead of Trimmomatic
Also, refactor FACS.sh so that there is a single read_trimming function

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ requirements:
   run:
     - python
     - sqlite
-    - trimmomatic
+    - ngless
     - megahit
     - paladin
     - samtools
@@ -39,7 +39,7 @@ requirements:
 about:
   home: https://github.com/FACS-Antimicrobial-Peptides-Prospection/FACS
   license: MIT
-  summary: "a module for amp prediction"
+  summary: "a module for AMP (antimicrobial peptide) prediction"
   description: |
     amp prediction
   dev_url: https://github.com/FACS-Antimicrobial-Peptides-Prospection/FACS
