RFCT Call Prediction through Python
We thus eliminate a number of R dependencies

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,11 +24,10 @@ requirements:
     - pigz
     - parallel
     - pandas
+    - rpy2
+    - tzlocal
     - r-base
     - r-essentials
-    - r-caret
-    - r-data.table
-    - r-dplyr
     - r-peptides
     - r-randomforest
 
