--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ cache:
   directories:
     - $HOME/miniconda3
 before_install:
-  - .travis/travis_before_install.sh
+  - bash ./.travis/travis_before_install.sh
 install:
   - export PATH=$HOME/miniconda3/bin:$PATH
   - bash install.sh
 script:
-  - bash automatedTest.sh
+  - bash ./tests/automatedTest.sh
