--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,16 @@ cache:
   ccache: true
   directories:
     - $HOME/miniconda3
+
+env:
+  matrix:
+    - PYTHON_VERSION=2.7
+    - PYTHON_VERSION=3.5
+    - PYTHON_VERSION=3.6
+    - PYTHON_VERSION=3.7
+
+# Some combinations seem to be missing on conda
+
 before_install:
   - bash ./.travis/travis_before_install.sh
 install:
