--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_install:
 install:
   - export PATH=$HOME/miniconda3/bin:$PATH
   - bash install.sh
+  - conda install --prefix ./envs/Macrel_env  -y pytest
 script:
   - eval "$(conda shell.bash hook)"
   - conda activate ./envs/Macrel_env
   - ./run-tests.sh
+  - python -m pytest macrel/tests
