--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,5 +5,6 @@ nav:
     - 'Macrel': index.md
     - 'Install': install.md
     - 'Usage': usage.md
+    - "What's New (history)": novelty.md
     - 'Cite': cite.md
 
