--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ nav:
     - 'Macrel': index.md
     - 'Install': install.md
     - 'Usage': usage.md
-    - "What's New (history)": novelty.md
+    - "What's New (history)": whatsnew.md
     - 'Contacts': contact.md
     - 'FAQ': faq.md
     - 'Cite us': cite.md
