update recipe to version 0.6.1

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "macrel" %}
-{% set version = "0.3.1" %}
-{% set sha256 = "b96e9906860472da58af72cb7851fd2af07e75dc673f9d198d66e999908b9e70" %}
+{% set version = "0.6.1" %}
+{% set sha256 = "bc1ce4f35fb6bfb595d74cd68e09e8342d359773e82fbd2b5a8384dd417a329b" %}
 
 package:
   name: {{ name }}
@@ -12,8 +12,7 @@ source:
 
 build:
   number: 0
-  # ngless is unavailable on osx
-  skip: True # [osx]
+  skip: True # [py2k]
   entry_points:
     - macrel= macrel.main:main
 
@@ -25,12 +24,12 @@ requirements:
     - pip
   run:
     - python
+    - atomicwrites
     - ngless
     - megahit
     - paladin
     - pandas
     - scikit-learn
-    - atomicwrites
     - rpy2
     - tzlocal
     - r-base
