--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,12 +3,10 @@ name: Build Status
 on:
    push:
    pull_request:
-   schedule:
-     - cron: '0 0 * * 0' # weekly
 
 defaults:
   run:
-    shell: bash
+    shell: bash # To ensure that the environment will always return to bash
 
 jobs:
   build:
@@ -16,18 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-#        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8]
-#        exclude:
-#          - os: macos-latest
-#            python-version: 3.8
-#          - os: windows-latest
-#            python-version: 3.6
-
-    env:
-      TRAVIS_REPO_SLUG: ${{ github.repository }}
-      TRAVIS_BRANCH: ${{ github.head_ref }}
-      TRAVIS_PULL_REQUEST: ${{ github.event.number }}
 
     steps:
             
@@ -46,20 +33,6 @@ jobs:
         miniconda-version: "latest"
         auto-activate-base: true
         activate-environment: ""
-
-
-    - name: Set ENV variables
-      run: |
-          echo "{TRAVIS_BRANCH}=${TRAVIS_BRANCH:-$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')}" >> $GITHUB_ENV
-          echo "{TRAVIS_SECURE_ENV_VARS}=${TRAVIS_SECURE_ENV_VARS:-$(if [ -z "${{ secrets.something }}" ]; then echo "false"; else echo "true"; fi)}" >> $GITHUB_ENV
-          echo "{TRAVIS_EVENT_TYPE}=${TRAVIS_EVENT_TYPE:-$(if [ "schedule" == "${{ github.event_name }}" ]; then echo "cron"; else echo "${{ github.event_name }}"; fi)}" >> $GITHUB_ENV
-        
-    - name: Print Travis ENV vars 
-      run: |
-          echo "TRAVIS_BRANCH: ${TRAVIS_BRANCH}"
-          echo "TRAVIS_PULL_REQUEST: ${TRAVIS_PULL_REQUEST}"
-          echo "TRAVIS_REPO_SLUG: ${TRAVIS_REPO_SLUG}"
-          echo "TRAVIS_SECURE_ENV_VARS: ${TRAVIS_SECURE_ENV_VARS}"
  
     - name: Build and test environment
       run: |
