--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,10 +4,6 @@ on:
    push:
    pull_request:
 
-defaults:
-  run:
-    shell: bash # To ensure that the environment will always return to bash
-
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -25,8 +21,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Display Python version
-      run: python -c "import sys; print(sys.version)"
     
     - uses: conda-incubator/setup-miniconda@v2
       with:
@@ -41,7 +35,6 @@ jobs:
 
     - name: Evaluate Macrel Build
       run: |
-        source /usr/share/miniconda3/bin/activate /home/runner/work/macrel/macrel/envs/Macrel_env
-        macrel="/home/runner/work/macrel/macrel/envs/Macrel_env/bin/macrel"
+        source activate ./envs/Macrel_env
         ./run-tests.sh
         python -m pytest macrel/tests
