--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Build environment
       run: |
         PYTHON_VERSION=${{ matrix.python-version }} ./install.sh
-        mamba install --prefix ./envs/Macrel_env  -y pytest
+        conda install -y mamba -n base -c conda-forge
+        mamba install --prefix ./envs/Macrel_env -y pytest
 
     - name: Test Macrel
       run: |
