ENH use mamba to install only if available (#46)
* alter the install tool conda --> mamba

* DOC update

* update actions with mamba

* Update python-app.yml

add mamba to CLI

* only use mamba if it is installed already

* fix order of script

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,8 +19,9 @@ jobs:
  
     - name: Build environment
       run: |
+        conda install -y mamba -n base -c conda-forge
         PYTHON_VERSION=${{ matrix.python-version }} ./install.sh
-        mamba install --prefix ./envs/Macrel_env  -y pytest
+        mamba install --prefix ./envs/Macrel_env -y pytest
 
     - name: Test Macrel
       run: |
