ENH include density in the percontigs output

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - 'Macrel': index.md
     - 'Install': install.md
     - 'Usage': usage.md
+    - 'Tutorial': tutorial.md
     - "What's New (history)": whatsnew.md
     - 'Contacts': contact.md
     - 'FAQ': faq.md
