--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,5 @@
 name: Build Status
+
 on: [push, pull_request]
 
 jobs:
@@ -6,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
           - "3.6"
           - "3.7"
@@ -21,18 +23,23 @@ jobs:
     - name: Setup miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
-        miniconda-version: "latest"
- 
-    - name: Build environment
+        activate-environment: test
+        python-version: ${{ matrix.python-version }}
+        auto-activate-base: false
+    - name: Install dependencies
+      shell: bash -l {0}
+      run : |
+        conda install -c bioconda -c conda-forge \
+          ngless pyrodigal megahit paladin pandas atomium tzlocal \
+          "scikit-learn<1.3.0" "joblib<1.3.0"
+        conda install pytest
+        pip install .
+    - name: Test with pytest
+      shell: bash -l {0}
       run: |
-        conda install -y mamba -n base -c conda-forge
-        PYTHON_VERSION=${{ matrix.python-version }} ./install.sh
-        source /usr/share/miniconda3/bin/activate envs/Macrel_env/
-        # Using conda/mamba to install pytest can cause other packages to be downgraded!
-        pip install pytest
-
-    - name: Test Macrel
-      run: |
-        source /usr/share/miniconda3/bin/activate envs/Macrel_env/
-        ./run-tests.sh
         python -m pytest macrel/tests
+
+    - name: Test Macrel CLI
+      shell: bash -l {0}
+      run: |
+        ./run-tests.sh
