--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,7 @@ jobs:
       shell: bash -l {0}
       run : |
         conda install -c bioconda -c conda-forge \
-          ngless pyrodigal megahit paladin pandas atomium tzlocal \
+          ngless pyrodigal megahit paladin pandas requests atomium tzlocal \
           "scikit-learn<1.3.0" "joblib<1.3.0"
         conda install pytest
         pip install .
