ENH Switch to ONNX for model storage
This will avoid warnings related to version mismatches (e.g., #59)

Retrained models to fix off by one error in feature indexing too

This changes results, but probabilities are 0.89 correlated (Spearman)
with previous version

Alas, macrel now requires a recent(ish) version of onnxruntime which
means that Python 3.6 and 3.7 are no longer tested. OTOH, we now test on
3.12 as well

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,12 +9,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
-          - "3.6"
-          - "3.7"
           - "3.8"
           - "3.9"
           - "3.10"
           - "3.11"
+          - "3.12"
 
     steps:
     - name: Checking code
@@ -30,8 +29,7 @@ jobs:
       shell: bash -l {0}
       run : |
         conda install -c bioconda -c conda-forge \
-          ngless pyrodigal megahit paladin pandas requests atomium tzlocal \
-          "scikit-learn<1.3.0" "joblib<1.3.0"
+          ngless pyrodigal megahit paladin pandas requests atomium tzlocal onnxruntime
         conda install pytest
         pip install .
     - name: Test with pytest
